# agentic-llm-os

./: .env.example  .gitignore  README.md  pyproject.toml
gui/: index.html  package-lock.json  package.json  vite.config.js
gui/src/: App.jsx  api.js
gui/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/native/: voice_dictation.swift
gui/src-tauri/resources/macos/: voice-dictation-helper
gui/src-tauri/src/: main.rs  voice.rs
gui/src/components/: ApprovalModal.jsx  TaskDetail.jsx  TaskList.jsx
gui/src/styles/: index.css
src/llmos/: config.py
src/llmos/api/: app.py
src/llmos/api/routes/: approvals.py  tasks.py
src/llmos/cli/: client.py  main.py
src/llmos/db/: engine.py  models.py
src/llmos/executor/: runner.py
src/llmos/planner/: llm.py
src/llmos/policy/: engine.py  rules.py
src/llmos/schemas/: enums.py  planner.py  task.py
src/llmos/worker/: loop.py
tests/: conftest.py  test_api.py  test_executor.py  test_llm_planner.py  test_planner.py  test_policy.py
