[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-llm-os"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
nlsh = "llmos.cli.main:app"
llmos-daemon = "llmos.api.app:start_daemon"

[tool.hatch.build.targets.wheel]
packages = ["src/llmos"]
