[package]
name = "llmos"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSSpeechRecognizer"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSString"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
